# wiki-reader

./: CMakeLists.txt  bar-descriptor.xml  deploy-to-blackberry.py  main.cpp  main.qml  res.qrc  wikimodel.cpp  wikimodel.h
cmake/: FindBBCascades.cmake
frontends/: CMakeLists.txt
frontends/blackberry/: CMakeLists.txt  bar-descriptor.xml  deploy-to-blackberry.py  main.cpp  searchmodel.cpp  searchmodel.h  wikimodel.cpp  wikimodel.h  wikireader.qrc
frontends/blackberry/assets/: main.qml
frontends/blackberry/cmake/: FindBBCascades.cmake  Toolchain-C6X.cmake  Toolchain-QNX-8.0.0.cmake
